force-app/main/default/objects/Trust_Center_View__c/fields/Badge_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Badge_Image_URL__c</fullName>
    <label>Badge Image URL</label>
    <length>255</length>
    <type>Text</type>
    <description>URL to certification badge image (Static Resources)</description>
</CustomField>