force-app/main/default/objects/Trust_Center_View__c/fields/Certification_Status__c.field-meta.xml
<CustomField>
    <fullName>Certification_Status__c</fullName>
    <label>Certification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certified</fullName>
            </value>
            <value>
                <fullName>In_Progress</fullName>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Not_Started</fullName>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Renewal_Required</fullName>
                <label>Renewal Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>