force-app/main/default/objects/Trust_Center_View__c/fields/Compliance_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Percentage__c</fullName>
    <label>Compliance Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
    <description>Overall compliance percentage for this framework (0-100)</description>
</CustomField>