force-app/main/default/objects/Trust_Center_View__c/fields/Controls_Compliant__c.field-meta.xml
<CustomField>
    <fullName>Controls_Compliant__c</fullName>
    <label>Controls Compliant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Number of compliant controls</description>
</CustomField>