force-app/main/default/objects/Trust_Center_View__c/fields/Controls_Total__c.field-meta.xml
<CustomField>
    <fullName>Controls_Total__c</fullName>
    <label>Controls Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Total number of controls in framework</description>
</CustomField>