force-app/main/default/objects/Trust_Center_View__c/fields/Is_Public__c.field-meta.xml
<CustomField>
    <fullName>Is_Public__c</fullName>
    <label>Is Public</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>SECURITY CONTROL: Only records with Is_Public=true are exposed via Sites</description>
</CustomField>