force-app/main/default/objects/Trust_Center_View__c/fields/Last_Audit_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Audit_Date__c</fullName>
    <label>Last Audit Date</label>
    <type>Date</type>
    <description>Most recent audit or assessment date for this framework</description>
</CustomField>